<resources>
    <string name="app_name">AndroidSubsystem</string>
    <string name="from_date_label">From date</string>
    <string name="to_date_label">To date</string>
    <string name="category_label">Category</string>
    <string name="filter_button">Filter</string>
    <string name="purchase_ticket_location">Location:</string>
    <string name="purchase_ticket_time">Time:</string>
    <string name="purchase_ticket_date">Date:</string>
    <string name="purchase_ticket_button">Purchase Ticket</string>
    <string name="purchase_ticket_rate">Ticket Rate:</string>
    <string name="purchase_ticket_count">Count:</string>
    <string name="purchase_ticket_amount">Amount:</string>
    <string name="make_payment_cardNumber">Card Number</string>
    <string name="make_payment_securityCode">Security Code</string>
    <string name="make_payment_expirationMonth">Expiration Month</string>
    <string name="make_payment_expirationYear">Expiration Year</string>
    <string name="make_payment_button">Pay Now</string>
    <string name="landing_gotoevents">Events List</string>
    <string name="landing_event_location">Location</string>
    <string name="landing_event_date">Date</string>
    <string name="landing_event_time">Time</string>
    <string name="landing_event_startDate">Start Date</string>
    <string name="landing_event_endDate">Ending Date</string>
    <string name="purchase_ticket_startDate">Start Date</string>
    <string name="eventDetails_startDate">Start Date</string>
    <string name="eventDetails_endDate">Ending Date</string>
    <string name="purchase_email">Email</string>
    <string name="purchase_ticket_email">Email</string>
</resources>
