<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ems.androidsubsystem.EventsActivity">
<android.support.v7.widget.LinearLayoutCompat
    android:id="@+id/events_from_date_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true">
    <com.beardedhen.androidbootstrap.BootstrapLabel
        android:id="@+id/events_from_date_label"
        android:text="@string/from_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:bootstrapBrand="info"
        app:bootstrapSize="md"
        android:layout_weight="0"/>
    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/events_from_date_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:bootstrapBrand="primary"
        app:bootstrapSize="md"
        android:layout_weight="1"/>
</android.support.v7.widget.LinearLayoutCompat>
<android.support.v7.widget.LinearLayoutCompat
    android:id="@+id/events_to_date_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_below="@id/events_from_date_layout">
    <com.beardedhen.androidbootstrap.BootstrapLabel
        android:id="@+id/events_to_date_label"
        android:text="@string/to_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:bootstrapBrand="info"
        app:bootstrapSize="md"
        android:layout_weight="0"/>
    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/events_to_date_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:bootstrapBrand="primary"
        app:bootstrapSize="md"
        android:layout_weight="1"/>
</android.support.v7.widget.LinearLayoutCompat>
<android.support.v7.widget.LinearLayoutCompat
    android:id="@+id/events_category_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_below="@id/events_to_date_layout">
    <com.beardedhen.androidbootstrap.BootstrapLabel
        android:id="@+id/events_category_label"
        android:text="@string/category_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:bootstrapBrand="info"
        app:bootstrapSize="md"
        android:layout_weight="0"/>
    <com.beardedhen.androidbootstrap.BootstrapDropDown
        android:id="@+id/events_category_dropDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:bootstrapBrand="primary"
        app:roundedCorners="true"
        app:bootstrapSize="xs"
        app:bootstrapExpandDirection="down"
        app:dropdownResource="@array/dropdown"
        android:layout_weight="1"/>
</android.support.v7.widget.LinearLayoutCompat>
    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/events_filter_button"
        android:text="@string/filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/events_category_layout"
        android:layout_alignParentLeft="true"
        app:bootstrapBrand="success"
        app:bootstrapSize="md"
        app:buttonMode="regular"
        app:showOutline="false"
        app:roundedCorners="true"/>
    <android.support.v7.widget.ListViewCompat
        android:id="@+id/events_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/events_filter_button"
        android:layout_alignParentLeft="true"
        android:divider="#ffffff"
        android:dividerHeight="2dp"/>
</RelativeLayout>