<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ems.androidsubsystem.EventDetailsActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/eventDetails_eventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:bootstrapBrand="regular"
        android:textSize="@dimen/bootstrap_h3_text_size"
        app:bootstrapText="Name of the event" />
    <ImageView
        android:id="@+id/eventDetails_eventImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@android:drawable/ic_media_play"/>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/eventDetails_location_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bootstrapBrand="regular"
            android:textSize="@dimen/bootstrap_h4_text_size"
            app:bootstrapText="@string/purchase_ticket_location"/>

        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/eventDetails_eventLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bootstrapBrand="regular"
            android:textSize="@dimen/bootstrap_h3_text_size"
            app:bootstrapText="Event address"/>
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/eventDetails_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bootstrapBrand="regular"
            android:textSize="@dimen/bootstrap_h4_text_size"
            app:bootstrapText="@string/purchase_ticket_date"/>
        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/eventDetails_eventDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bootstrapBrand="regular"
            android:textSize="@dimen/bootstrap_h3_text_size"
            app:bootstrapText="Date of event"/>
    </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/eventDetails_Time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bootstrapBrand="regular"
            android:textSize="@dimen/bootstrap_h4_text_size"
            app:bootstrapText="@string/purchase_ticket_time"/>
        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/eventDetails_eventTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bootstrapBrand="regular"
            android:textSize="@dimen/bootstrap_h4_text_size"
            app:bootstrapText="Time of the event"/>
    </android.support.v7.widget.LinearLayoutCompat>
    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/eventDetails_eventDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bootstrapBrand="regular"
        android:textSize="@dimen/bootstrap_h5_text_size"
        app:bootstrapText="Full description of the event goes here"/>
    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/eventDetails_purchaseTicket_button"
        android:text="@string/purchase_ticket_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:bootstrapBrand="success"
        app:bootstrapSize="md"
        app:buttonMode="regular"
        app:showOutline="false"
        app:roundedCorners="true"/>
</LinearLayout>