<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/landing_event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:bootstrapBrand="regular"
        android:textSize="@dimen/bootstrap_h3_text_size"
        app:bootstrapText="Name of the event" />
    <ImageView
        android:id="@+id/landing_event_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@android:drawable/ic_media_play"/>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/landing_event_location_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bootstrapBrand="regular"
            android:textSize="@dimen/bootstrap_h4_text_size"
            app:bootstrapText="@string/landing_event_location"/>

        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/landing_event_Location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bootstrapBrand="regular"
            android:textSize="@dimen/bootstrap_h3_text_size"
            app:bootstrapText="Event address"/>
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/landing_event_startDate_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bootstrapBrand="regular"
            android:textSize="@dimen/bootstrap_h4_text_size"
            app:bootstrapText="@string/landing_event_startDate"/>
        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/landing_event_startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bootstrapBrand="regular"
            android:textSize="@dimen/bootstrap_h3_text_size"
            app:bootstrapText="Date of event"/>
    </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/landing_event_endDate_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bootstrapBrand="regular"
            android:textSize="@dimen/bootstrap_h4_text_size"
            app:bootstrapText="@string/landing_event_endDate"/>
        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/landing_event_endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bootstrapBrand="regular"
            android:textSize="@dimen/bootstrap_h3_text_size"
            app:bootstrapText="Date of event"/>
    </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/landing_event_Time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bootstrapBrand="regular"
            android:textSize="@dimen/bootstrap_h4_text_size"
            app:bootstrapText="@string/landing_event_time"/>
        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/landing_event_Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bootstrapBrand="regular"
            android:textSize="@dimen/bootstrap_h4_text_size"
            app:bootstrapText="Time of the event"/>
    </android.support.v7.widget.LinearLayoutCompat>
    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/landing_event_Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bootstrapBrand="regular"
        android:textSize="@dimen/bootstrap_h5_text_size"
        app:bootstrapText="Full description of the event goes here"/>
</LinearLayout>